<resources>
    <string name="app_name">CalorieCounter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calorie Counter</string>
    <string name="nav_header_subtitle">developed by SijaAnan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="start_welcome_txt">Welcome to SijaAnan CalorieCounter App</string>
    <string name="start_signup_btn">Create an account</string>
    <string name="start_signin_btn">Sign in</string>
    <string name="reg_title_txt">Please insert your details, and verify your email before logging in</string>
    <string name="reg_email_hint">Enter your e-mail ...</string>
    <string name="reg_pass_hint">Please enter a password ...</string>
    <string name="reg_signup_btn">Set profile details , Send verification mail</string>
    <string name="main_action_logout">Log out</string>
    <string name="start_email_txt">Enter Your Email ...</string>
    <string name="start_password_txt">Enter Your Password ...</string>
    <string name="reg_name_txtview">Your Name (Full Name) :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_blank_fragment">Hello HOME fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_blank_fragment">Hello PROFILE fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="categories_blank_fragment">Hello CATEGORIES fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="food_blank_fragment">Hello FOOD fragment</string>
</resources>
