<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cad6ae"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/start_welcome_txtview"
        android:layout_width="374dp"
        android:layout_height="86dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/start_welcome_txt"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_signup_button"
        style="@android:style/Widget.Holo.Button.Toggle"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="@color/start_signup_btn"
        android:text="@string/start_signup_btn"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_password_txt"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/start_signin_button"
        style="@android:style/Widget.Holo.Button.Toggle"
        android:layout_width="75dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/start_signin_btn"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/start_signup_button"
        app:layout_constraintTop_toBottomOf="@+id/start_password_txt"
        app:layout_constraintVertical_bias="0.744" />

    <EditText
        android:id="@+id/start_email_txt"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/start_email_txt"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_welcome_txtview" />

    <EditText
        android:id="@+id/start_password_txt"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/start_password_txt"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_email_txt" />
</android.support.constraint.ConstraintLayout>